sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:2: error: Missing closing brace `}' assumed here
def shellSort()  {
^AlgShellSort:2: error: expected class or object definition
def shellSort()  {
^